--- a/Documents/Spring Microservices/Project/order-service/src/main/resources/application.properties
+++ b/Documents/Spring Microservices/Project/order-service/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/order-service
+spring.datasource.username=root
+spring.datasource.password=mysql
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+server.port=8081
 
